--- a/auth/package.json
+++ b/auth/package.json
@@ -8,12 +8,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "firebase": "^5.4.1",
+    "prop-types": "^15.6.2",
     "react": "16.4.1",
     "react-native": "0.56.0"
   },
   "devDependencies": {
+    "babel-eslint": "8.0.3",
     "babel-jest": "23.4.2",
     "babel-preset-react-native": "^5",
+    "eslint": "^5.4.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-react-native": "^3.2.1",
     "jest": "23.5.0",
     "react-test-renderer": "16.4.1"
   },
